[gd_scene load_steps=2 format=3 uid="uid://cq5xh8m7n8yqp"]

[ext_resource type="Script" path="res://addons/apklis_update/ApklisUpdateDialog.gd" id="1"]

[node name="ApklisUpdateDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nueva Actualización Disponible"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Versión 1.0.0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Novedades:"
theme_override_font_sizes/font_size = 16

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="ChangelogLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "- Mejoras de rendimiento
- Corrección de errores
- Nuevas características"
autowrap_mode = 3

[node name="InfoContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SizeLabel" type="Label" parent="Panel/VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Tamaño: 50 MB"

[node name="DownloadsLabel" type="Label" parent="Panel/VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Descargas: 1000"

[node name="RatingLabel" type="Label" parent="Panel/VBoxContainer/InfoContainer"]
layout_mode = 2
text = "★ 4.5"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="UpdateButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Actualizar Ahora"

[node name="LaterButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Más Tarde"
